fix: center text on iOS devices

--- a/src/blocks/card/card__likes-container/card__likes-container.css
+++ b/src/blocks/card/card__likes-container/card__likes-container.css
@@ -1,4 +1,5 @@
 .card__likes-container {
+    width: 22px;
     display: flex;
     flex-direction: column;
     align-items: center;
